# custom-stock-bar

./: .gitignore  AGENTS.md  pyproject.toml
custom_bar/: demo.py
custom_bar/bar_divider/: __init__.py
custom_bar/bar_divider/gold_bar_divider/: __init__.py  gold_calc.py  gold_models.py
custom_bar/bar_divider/price_bar_divider/: price_bar_divider.py
custom_bar/converter/: __init__.py  bar_converter.py
tests/: test_bar_converter.py  test_gold_bar_divider.py  test_gold_calc.py  test_price_divider.py
