[tool.poetry]
name = "custom-stock-bar"
version = "0.1.2"
description = "Tool for convert any price to Custom Bar price"
authors = ["Beilak <beylak@yandex.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/beilak/custom-stock-bar"
keywords = ["stock", "bar", "convertor", "price bar", "gold bar"]
packages = [
    { include = "custom_bar" },
]


[tool.poetry.dependencies]
python = ">= 3.11, <=3.13"
pandas = "*"


[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
isort = "*"
yfinance = "*"
matplotlib = "*"
mypy = "*"
pandas-stubs = "^2.3.3.260113"

[tool.mypy]
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

# Convert warnings to errors for hard enforcement
error_summary = true
show_error_codes = true
pretty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
